--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   <p>We may update our Privacy Policy from time to time. Any changes will be posted on this page.</p>
 
   <h2>Contact Us</h2>
-  <p>If you have any questions, please contact us at: <a href="mailto:your@email.com">your@email.com</a></p>
+  <p>If you have any questions, please contact us at: <a href="mailto:teamidmobile@gmail.com">teamidmobile@gmail.com</a></p>
 </body>
 </html>
